Update external_trust_without_sid_filtering documentation

--- a/assets/mapped risks/mapped_risks.json
+++ b/assets/mapped risks/mapped_risks.json
@@ -21,8 +21,8 @@
             ]
         },
         "sid": {
-            "id": "Identificateur de sécurité (SID)",
-            "title": "Listes d'accès (ACL)",
+            "id": "sid",
+            "title": "Identificateur de sécurité (SID)",
             "file_name": "sid.docx",
             "concepts": [
                 "rid",
@@ -39,7 +39,7 @@
         },
         "trust": {
             "id": "trust",
-            "title": "Relation de confiance (Trust)",
+            "title": "Relation d'approbation (Trust)",
             "file_name": "trust.docx",
             "concepts": [
             ]
